@@ -228,6 +228,7 @@ typedef void * NXC_SESSION;
 #define NF_IS_VRRP               0x00001000  /* VRRP support */
 #define NF_HAS_VLANS             0x00002000  /* VLAN information available */
 #define NF_IS_8021X              0x00004000  /* 802.1x support enabled on node */
+#define NF_IS_STP                0x00008000  /* Spanning Tree (IEEE 802.1d) enabled on node */
 
 #define NF_DISABLE_TOPOLOGY_POLL 0x00800000
 #define NF_DISABLE_SNMP          0x01000000
@@ -1099,6 +1100,7 @@ struct __nxc_object_node
    BYTE nSNMPVersion;
 	WORD wRequiredPollCount;
 	TCHAR szSysDescription[MAX_DB_STRING];
+	BYTE bridgeBaseAddress[MAC_ADDR_LENGTH];
 };
 
 struct __nxc_object_subnet
